log
Thu 14 Sep 2023 12:28:04 AM UTC: 
 treemap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:50: error: expected ‘)’ before ‘;’ token
   43 |     TreeMap* mapa=(TreeMap)malloc(sizeof(TreeMap);
      |                                  ~               ^
      |                                                  )
treemap.c:52:1: error: conversion to non-scalar type requested
   52 | }
      | ^
treemap.c:52:1: error: expected ‘,’ or ‘;’ before ‘}’ token
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:43:14: error: unused variable ‘mapa’ [-Werror=unused-variable]
   43 |     TreeMap* mapa=(TreeMap)malloc(sizeof(TreeMap);
      |              ^~~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
973b2f5
Thu 14 Sep 2023 12:28:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: conversion to non-scalar type requested
   43 |     TreeMap* mapa=(TreeMap)malloc(sizeof(TreeMap));
      |     ^~~~~~~
Compilation failed
1a33a27
